# kernsec

./: Cargo.toml  README.md
configs/: defconfig.conf  kspp.conf  linux-x86_64.conf
src/: cli.rs  kconfig.rs  main.rs  options.rs  secureboot.rs  selinux.rs  sysctl.rs  tainted.rs  utils.rs
src/kconfig/: mod.rs  utils.rs
