[package]
name = "kernsec"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
colored = "2.0.0"
clap = { version = "3.2.17", features = ["derive"] }
flate2 = "1.0.24"
sysctl = "0.5.2"
efivar = "0.2.1"
selinux = "0.2.7"
regex = "1.6.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
